--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
     flex-direction: column;
     align-items: center;
     background-color: seashell;
+    padding-top: 50px;
 }
 
 div{
@@ -30,7 +31,7 @@ div{
     font-weight: bold;
     cursor: pointer;
     font-size: 16px;
-    transition: 0.5s;
+    transition: 0.4s;
 }
 .boton:hover {
     background-color: burlywood;
@@ -50,14 +51,11 @@ div{
     font-size: 18px;
 }
 
-h1{
-    margin: 40px;
-}
 h2{
     background-color: chocolate;   
     color: antiquewhite;
     padding: 7px 30px;
-    border-radius: 50px;
+    border-radius: 20px;
     box-shadow: 0px -2px 6px sienna;
 }
 
