--- a/css/tabla.css
+++ b/css/tabla.css
@@ -1,7 +1,7 @@
 table{
     --bordes-radius: 20px;
-    margin: 80px 0 40px;
-    border-collapse: separate;
+    margin-top: 80px;
+    margin-bottom: 40px;
     border-spacing: 0;
     background-color: cornsilk;
     box-shadow: 0px 4px 10px sienna;
@@ -13,7 +13,6 @@ th, td {
     border: none;
     padding: 10px;
     text-align: center;
-    color: saddlebrown;
 }
 
 th{
@@ -24,6 +23,7 @@ th{
 }
 td{
     border-top: 1px solid sienna;
+    color: saddlebrown;
 }
 
 th:first-child {
